# Practice

./: Add_note.cpp  Add_note.h  CMakeLists.txt  Data_output_to_screen.cpp  Data_output_to_screen.h  Enter_from_keyboard.cpp  Enter_from_keyboard.h  Input data of stud.txt  Printout_on_request.cpp  Printout_on_request.h  change_note.cpp  change_note.h  delete_note.cpp  delete_note.h  functions.h  main.cpp  return_to_menu.cpp  return_to_menu.h  sorting.cpp  sorting.h  structs.h
